--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Aproveche esta oportunidad</h2>
                 <hr class="primary">
-                <p>Si esta listo para despegar, no dude en contactarnos, son un equipo de trabajo serio y su empresa es parte de nuestra familia desde el primer contacto!</p>
+                <p>Si esta listo para despegar, no dude en contactarnos, somos un equipo de trabajo serio y su empresa es parte de nuestra familia desde el primer contacto!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://twitter.com/rey_cristhian">
@@ -21,7 +21,7 @@
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="https://github.com/cristhianrey">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-              
+
             </a>
         </div>
 
