--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,8 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                     <h3>Proyectos</h3>
-                    <p class="text-muted">Conozca un poco mas acerca de nuestros proyectos</p>
+                    <p class="text-muted">Conozca un poco mas acerca de nuestros proyectos
+                    Sistema de Gestion Empresarial <a href="http://devsolpy.github.io/friotech/"> Friotech</a> </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -21,13 +22,15 @@
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Productos</h3>
                     <p class="text-muted">Acceda a demostraciones en linea de nuestros Produtos en Produccion</p>
+                    
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Servicios</h3>
-                    <p class="text-muted">No es necesario que cuente con una infraestructura, nos adaptamos a su empresa</p>
+                    <p class="text-muted">No es necesario que cuente con una infraestructura, nos adaptamos a su empresa
+                    Gestion de Proyectos <a href="http://redmine-crey.rhcloud.com/projects/friotech">Redmine</a></p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
