--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,10 +7,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                WebApps
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Computación en la nube
                             </div>
                         </div>
                     </div>
@@ -22,10 +22,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                WebApps
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Desarrollo de Aplicaciones Webs
                             </div>
                         </div>
                     </div>
@@ -37,10 +37,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                WebApps
                             </div>
                             <div class="project-name">
-                                Project Name
+                              Desarrollo de Soluciones a Medida
                             </div>
                         </div>
                     </div>
@@ -52,10 +52,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                System and Process Analysis
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Automatizacion de Procesos
                             </div>
                         </div>
                     </div>
@@ -67,10 +67,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                SysAdmin
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Soporte Tecnico
                             </div>
                         </div>
                     </div>
@@ -82,10 +82,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                System and Process Analysis
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Consultoria y Auditoria de Sistemas
                             </div>
                         </div>
                     </div>
