--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Devsolpy</h1>
             <hr>
-            <p>Desarrollo de Soluciones Informaticas del Paraguay</p>
+            <p>Equipo de Desarrollo de Soluciones Informaticas del Paraguay</p>
             <p>
               Desarrollo de Aplicaciones Webs,
               Computación en la nube,
